--- a/aula26/views/home.handlebars
+++ b/aula26/views/home.handlebars
@@ -9,4 +9,14 @@
 {{/each}}
 
 
-{{!--      #each   cada   usada quando recebe varios objetos na view--}}
+{{!-- 
+     #each "cada" -  usada quando recebe varios objetos na view
+  
+    createdAt - data de criação
+--}}
+
+
+{{!-- 
+    link da aula - nos comentários tem algumas ideias boas para implementar
+    https://www.youtube.com/watch?v=PiM-E4cDj0s&  list=PLJ_KhUnlXUPtbtLwaxxUxHqvcNQndmI4B&index=26&ab_channel=VictorLima-GuiadoProgramador
+ --}}
